--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,11 @@ header ul{
 header li{
     list-style: none;
     margin-right: 20px;
+    transition: transform 1s ease;
+}
+
+header li:hover{
+    transform: translateY(-5px);
 }
 
 header a:any-link{
@@ -53,14 +58,27 @@ header .img-container img{
     border-radius: 5px;
 }
 
-.home{
+.home {
     background-image: url(/assets/homepage.png);
     background-position: top;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 600vh;
+    background-repeat: repeat-x;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
 }
 
+.home h1 {
+    font-family: "Anton", sans-serif;
+    font-size: 45px; 
+    margin: 0;
+    background-color: rgb(189, 18, 18);
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 5px 5px #333333;
+}
 
 .products{
     display: flex;
